Added some examples on wave and schroedinger maps (without details).

--- a/StandardPaper2.tex
+++ b/StandardPaper2.tex
@@ -137,6 +137,9 @@
 \newcommand{\hra}{\hookrightarrow}
 \newcommand{\mt}{\mapsto}
 
+%Names
+\newcommand{\schrodinger}{Schr\"{o}dinger}
+
 %Notes
 \newcommand{\pa}[1]{{\color{green} pa: {#1}}}
 \newcommand{\jj}[1]{{\color{red} jj: {#1}}}
