--- a/main.tex
+++ b/main.tex
@@ -244,6 +244,36 @@ where \(g\) is a left/right/bi-invariant metric on \(M\). Likewise for \(N\). Th
 
 Again \(G\)-equivariance on a warped-product should reduce to an ODE.
 
+\subsubsection*{Wave Maps}
+
+These are
+\[
+u_{tt} = \Delta u
+\]
+which leads to
+\[
+\psi_{tt} = \psi_{rr} + \frac{C}{r} \psi_r - \frac{1}{r^2} F(\psi)
+\]
+and similar blow up phenomena occurs. These arise as analogs of harmonic maps from a Lorentzian space into a Riemannian space. Or it can be thought of as the wave equation version of the harmonic map heat flow.
+
+\textbf{Many references here!}
+
+\subsubsection*{\schrodinger{} Maps}
+
+These are
+\[
+\partial_t u = u \wedge \Delta u
+\]
+for maps into \(\S^2\).
+
+It would be interesting to see what happens with \(\S^6\) using the ``cross-product'' coming from the imaginary Octonions:
+\[
+X \wedge Y = \operatorname{Im} [X, Y]
+\]
+where the commutator is by the Octonion multiplication.
+
+What is the equivariant ODE in this case?
+
 \subsubsection*{Relationships among the examples}
 
 The examples of harmonic maps into spheres and Yang-Mills flow are particular cases of \(F\) in \eqref{eq:harmonic_map_heat_flow}. It's worth pointing out that in the critical dimenstion, the coeefficient of \(\psi_r\) is \(1\). For the problem \eqref{eq:pde} we allow the more general situation where \(C \ne 1\) and so our study is applicible in higher dimensions. It also turns out that the value of \(F'(0)\) is crticial to the study of finite time blow up. We summarise these examples in the following table (absorbing the \(\ell^2\) into \(F\)):
