Added an example about maps into Lorentzian warped products where the roots could be complex.

--- a/main.tex
+++ b/main.tex
@@ -232,6 +232,12 @@ satisfy
 
 \textbf{Really we want \(\Delta u + u^p\), or in other words \(A<0\) so \(F = A u^p\) is decreasing in this case. Probably it's okay, but might need to take that into account. Perhaps best to look at equations with \(+ \frac{1}{r} F(\psi)\) and assume \(F\) is odd and either increasing or decreasing. Should work out?}
 
+\subsubsection*{Maps into Lorenztian Warped Products}
+
+If we have maps into a Lorenztian warped product, we should obtain a similar situation to the heat flow with non-linear reaction. Namely the function \(F\) has the opposite sign. This should include heat flow with non-linear reaction as a special case?
+
+\textbf{In this case, the roots of the Euler characteristic equation need not be real, or if real, need not break up into one positive and one negative root. One might hope to apply a similar analysis, but now the real part of the root should play the same role as the root (called \(\beta\) below). That is, if the real part is less than \(1\), we get blow and bigger than \(1\) has no blow up just as described below.}
+
 \subsubsection*{General Equivariant Harmonic Map Heat Flow}
 
 Let \(G\) be a Lie group and \(M, N\) homogeneous \(G\) spaces. Then look at warped product metrics
