--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -6608,3 +6608,29 @@ MRREVIEWER = {W. W. Hooker},
    MRCLASS = {35.62},
   MRNUMBER = {0241821},
 }
+
+@Article{Zhou2017,
+author="Zhou, Hengyu",
+title="Inverse Mean Curvature Flows in Warped Product Manifolds",
+journal="The Journal of Geometric Analysis",
+year="2017",
+month="Jun",
+day="23",
+issn="1559-002X",
+doi="10.1007/s12220-017-9887-z",
+url="https://doi.org/10.1007/s12220-017-9887-z"
+}
+
+@ARTICLE{2016arXiv161005234M,
+   author = {{Mullins}, T.},
+    title = "{On the inverse mean curvature flow in warped product manifolds}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1610.05234},
+ primaryClass = "math.DG",
+ keywords = {Mathematics - Differential Geometry, 53C25, 35K55, 53C21},
+     year = 2016,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv161005234M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
